# test-bazel-nix

./: README.md  WORKSPACE  default.nix  shell.nix
js_app1/: BUILD  index.ts  package.json
js_app2/: BUILD  index.ts  package.json
js_solidstartapp/: BUILD  package.json  pnpm-lock.yaml
js_t3app/: package.json
python_hatch/: .cruft.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
python_hatch/docs/reference/: pythonhatch.md
python_hatch/pythonhatch/: __init__.py
python_hatch/tests/: test_add.py
python_package_1/: BUILD  test.py
