[tool.ruff]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--cov=pythonhatch/ --cov-report=term-missing"
asyncio_mode = "strict"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "pythonhatch/__init__.py"

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy pythonhatch/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy pythonhatch/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "pythonhatch"
authors = [
  { name = "pythonhatch", email = "devs@pythonhatch.org" }
]
description = "test package for python and hatch"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Documentation = "https://cameronraysmith.net/pythonhatch"
Source = "https://github.com/cameronraysmith/test-bazel-nix"
